<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThinkParc</string>
    <string name="title_activity_splash_screen">ThinkParc</string>
    <string name="website"><u>http://www.think-parc.com</u></string>
    <string name="type_software">Android Application</string>

    <!-- Global -->
    <string name="loading">Loading&#8230;</string>
    <string name="no_values">-</string>
    <string name="date_pattern">DD/MM/YYYY</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Authentication view -->
    <string name="authentication">Think-Parc | Authentication</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="error_connection">Please check your internet connection.</string>
    <string name="error_retrieving">Error while retrieving token, please try again.</string>
    <string name="error">Error: </string>
    <string name="error_incorrect">&#160;incorrect.</string>

    <!-- Home Dashboard -->
    <string name="stock">Stock</string>
    <string name="vehicles">Vehicles</string>
    <string name="maintenance">Maintenance</string>
    <string name="documents">Documents</string>
    <string name="webbrowser">Open in browser</string>
    <string name="backpress_logoff">Please use the right bottom button to logogg.</string>

    <!-- Vehicles Activity -->
    <string name="action_gotowebsite">Open website in browser</string>
    <string name="title_activity_vehicles">Vehicles</string>
    <string name="title_selectvehicle">Select a vehicle</string>
    <string name="title_serialnumber">Serial number</string>
    <string name="title_buyingdate">Buying date</string>
    <string name="title_circulationdate">First circulation date</string>
    <string name="title_brand">Brand</string>
    <string name="title_model">Model</string>
    <string name="title_mileage">Mileage</string>
    <string name="title_energy">Energy</string>
    <string name="title_state">State</string>
    <string name="title_category">Category</string>
    <string name="title_buyingprice">Buying price</string>
    <string name="title_equipments">Equipments</string>
    <string name="title_site">Site</string>
    <string name="title_commentary">Commentary</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>

    <!-- Maintenance Activity -->
    <string name="title_activity_maintenance">Pick a vehicle</string>
    <string name="title_activity_maintenance_stock">Pick a reference</string>
    <string name="title_activity_maintenance_site">Pick a location</string>
    <string name="quantity">Quantity</string>

    <!-- Success view -->
    <string name="success">Success!</string>

    <!-- Documents Activity -->
    <string name="title_activity_documents">Documents</string>

    <!-- Stock Activity -->
    <string name="title_activity_stock">Stock Menu</string>
    <string name="stock_addin">Add in stock</string>
    <string name="stock_search">Search a reference</string>
    <string name="title_activity_stock_search">Search reference</string>
    <string name="title_activity_stock_add">Add in stock</string>
    <string name="stock_choosereference">Choose a reference</string>
    <string name="stock_quantity">Quantity</string>
    <string name="stock_enterquantity">Enter a quantity</string>
    <string name="stock_magasinnr">Magasin Nr</string>
    <string name="stock_entermagasinnr">Enter a magasin nr</string>
    <string name="stock_driveway">Driveway</string>
    <string name="stock_enterdriveway">Enter the driveway</string>
    <string name="stock_bay">Bay</string>
    <string name="stock_enterbay">Enter the bay</string>
    <string name="stock_rack">Rack</string>
    <string name="stock_enterrack">Enter the rack</string>
    <string name="stock_locker">Locker</string>
    <string name="stock_enterlocker">Enter the locker</string>
    <string name="stock_position">Position</string>
    <string name="stock_enterposition">Enter the position</string>
    <string name="stock_stockkind">Stock kind</string>
    <string name="stock_storehouse">Store house</string>
    <string name="stock_enterstorehouse">Enter the store house</string>
    <string name="stock_site">Site</string>
    <string name="stock_addinstock">Add in stock</string>
    <string name="stock_btsearch">Search!</string>
    <string name="stock_available">Available</string>
    <string name="stock_notavailable">Not available</string>
    <string name="stock_error_fields">Please check your entries. One of them must probably be empty or in a wrong state.</string>
    <string name="title_activity_stock_search_result">Availability</string>

</resources>