<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/think_parc_addinstock"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fr.thinkparc.subparts.stock.StockAddActivity" >

        <!-- Reference -->

        <TextView
            android:id="@+id/tvReference"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/stock_choosereference" />

        <Spinner
            android:id="@+id/spinnerReference"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tvReference"
            android:background="@color/white_transparency" />

        <!-- Quantity -->

        <TextView
            android:id="@+id/tvQuantity"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerReference"
            android:text="@string/stock_quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvQuantity"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etQuantity"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_height"
                android:layout_weight="2"
                android:background="@drawable/edittextstyle_selector"
                android:gravity="center"
                android:hint="@string/stock_enterquantity"
                android:inputType="number|text"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinnerMeasurements"
                android:layout_width="0dp"
                android:layout_height="@dimen/spinner_height"
                android:layout_weight="1"
                android:background="@color/white_transparency"
                android:entries="@array/spinnerMeasurements" />
        </LinearLayout>

        <!-- Magasin Nr -->

        <TextView
            android:id="@+id/tvMagasinNr"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuantity"
            android:layout_marginTop="40dp"
            android:text="@string/stock_magasinnr" />

        <EditText
            android:id="@+id/etMagasinNr"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvMagasinNr"
            android:background="@drawable/edittextstyle_selector"
            android:gravity="center"
            android:hint="@string/stock_entermagasinnr"
            android:inputType="number|text"
            android:textColor="@color/white" />

        <!-- Driveway -->

        <TextView
            android:id="@+id/tvDriveway"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMagasinNr"
            android:text="@string/stock_driveway" />

        <EditText
            android:id="@+id/etDriveway"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvDriveway"
            android:background="@drawable/edittextstyle_selector"
            android:gravity="center"
            android:hint="@string/stock_enterdriveway"
            android:inputType="number|text"
            android:textColor="@color/white" />

        <!-- Bay -->

        <TextView
            android:id="@+id/tvBay"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etDriveway"
            android:text="@string/stock_bay" />

        <EditText
            android:id="@+id/etBay"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvBay"
            android:background="@drawable/edittextstyle_selector"
            android:gravity="center"
            android:hint="@string/stock_enterbay"
            android:inputType="number|text"
            android:textColor="@color/white" />

        <!-- Rack -->

        <TextView
            android:id="@+id/tvRack"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etBay"
            android:text="@string/stock_rack" />

        <EditText
            android:id="@+id/etRack"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvRack"
            android:background="@drawable/edittextstyle_selector"
            android:gravity="center"
            android:hint="@string/stock_enterrack"
            android:inputType="number|text"
            android:textColor="@color/white" />

        <!-- Locker -->

        <TextView
            android:id="@+id/tvLocker"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRack"
            android:text="@string/stock_locker" />

        <EditText
            android:id="@+id/etLocker"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvLocker"
            android:background="@drawable/edittextstyle_selector"
            android:gravity="center"
            android:hint="@string/stock_enterlocker"
            android:inputType="number|text"
            android:textColor="@color/white" />

        <!-- Position -->

        <TextView
            android:id="@+id/tvPosition"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etLocker"
            android:text="@string/stock_position" />

        <EditText
            android:id="@+id/etPosition"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvPosition"
            android:background="@drawable/edittextstyle_selector"
            android:gravity="center"
            android:hint="@string/stock_enterposition"
            android:inputType="number|text"
            android:textColor="@color/white" />

        <!-- Stock kind -->

        <TextView
            android:id="@+id/tvKindStock"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPosition"
            android:text="@string/stock_stockkind" />

        <Spinner
            android:id="@+id/spinnerKinds"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvKindStock"
            android:background="@color/white_transparency"
            android:entries="@array/spinnerTypeStock" />

        <!-- Store Hourse -->

        <TextView
            android:id="@+id/tvStoreHouse"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerKinds"
            android:text="@string/stock_storehouse" />

        <EditText
            android:id="@+id/etStoreHourse"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvStoreHouse"
            android:background="@drawable/edittextstyle_selector"
            android:gravity="center"
            android:hint="@string/stock_enterstorehouse"
            android:textColor="@color/white" />

        <!-- Site -->

        <TextView
            android:id="@+id/tvSite"
            style="@style/tvStyleTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etStoreHourse"
            android:text="@string/stock_site" />

        <Spinner
            android:id="@+id/spinnerSites"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_below="@id/tvSite"
            android:background="@color/white_transparency" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerSites"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/green_light"
            android:text="@string/stock_addinstock" />
    </RelativeLayout>

</ScrollView>