<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/think_parc_home_4"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogoTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/type_software"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_grey" />

    <TextView
        android:id="@+id/tvSoftwareName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_grey"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/website"
        android:textColor="@color/light_blue" />

    <ImageView
        android:id="@+id/ivLogoTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSoftwareName"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_thinkparc_light" />

</RelativeLayout>