<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/think_parc_addinstock"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.thinkparc.subparts.stock.StockSearchActivity" >

    <!-- Reference -->

    <TextView
        android:id="@+id/tvReference"
        style="@style/tvStyleTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/stock_choosereference" />

    <Spinner
        android:id="@+id/spinnerReference"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvReference"
        android:background="@color/white_transparency" />

    <!-- Site -->

    <TextView
        android:id="@+id/tvSite"
        style="@style/tvStyleTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerReference"
        android:text="@string/stock_site" />

    <Spinner
        android:id="@+id/spinnerSites"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_below="@id/tvSite"
        android:background="@color/white_transparency" />

    <Button
        android:id="@+id/btSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerSites"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/green_light"
        android:text="@string/stock_btsearch" />

</RelativeLayout>